--- a/stylesheet.html
+++ b/stylesheet.html
@@ -20,11 +20,24 @@
    #green{
        background-color: green;
    }
+   .a{
+    font-size: 50px;
+   }
+   .b{
+    font-size: 2em;
+   }
+   #try{
+    font-size: 1rem;
+   }
    </style>
 </head>
 <body>
     <p class="CSS-box" id="orange">abc</p>
     <p class="CSS-box" id="white">dfg</p>
     <p class="CSS-box" id="green">hij</p>
+    <div class="a">
+        <div class="b">Lorem ipsum dolor sit amet.</div>
+    </div>
+    <div id="try1">Lorem, ipsum dolor.</div>
 </body>
 </html>
