--- a/box-practice1.html
+++ b/box-practice1.html
@@ -9,9 +9,14 @@
          .top{
             color: red;
             width: 200px;
-            height: 250px;
+            height: 200px;
             margin: 10px;
             padding: 30px;
+            background-color:blue;
+            border-radius: 9px;
+            text-align: center;
+            transform: translateY();
+            
          }
          .baap{
             background: green;
